--- a/FRONTEND/admin/index.html
+++ b/FRONTEND/admin/index.html
@@ -13,6 +13,7 @@
       src="https://use.fontawesome.com/releases/v6.3.0/js/all.js"
       crossorigin="anonymous"
     ></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js"></script>
     <title>Vite App</title>
   </head>
   <body>
