--- a/FRONTEND/client/index.html
+++ b/FRONTEND/client/index.html
@@ -24,7 +24,7 @@
       crossorigin="anonymous"
     ></script>
     <script src="https://www.google.com/recaptcha/api.js" async defer></script>
-
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite App</title>
   </head>
